--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,3 @@
-newsbeuter_spread_path: '/home/newsbeuter/'
 newsbeuter_spread_user: 'newsbeuter'
+newsbeuter_spread_host: '0.0.0.0'
 newsbeuter_spread_port: 5000
